Fix spacing for headings

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -48,7 +48,7 @@ a {
 
   #header {
     margin: 0;
-    padding: 2.8em 1em 0.4em 1em;
+    padding: 2.8em 1em 0em 1em;
     font-size: 2.8em;
     font-weight: 700;
     text-align: center;
@@ -57,7 +57,7 @@ a {
   #subheader {
     text-align: center;
     margin: 0;
-    padding: 0 1em 12px 1em;
+    padding: 0 1em 20px 1em;
     line-height: 1.6em;
     font-size: 1.2em;
     font-weight: 400;
